opsiconfd (4.0.1.3-1) stable; urgency=low

  * Add expired session info to statistics

 -- Jan Schneider <j.schneider@uib.de>  Fri, 17 Jun 2011 13:59:24 +0200

opsiconfd (4.0.1.2-1) stable; urgency=low

  * stop opsiconfd cleanly on non-suse os before uninstalling
  * let twisted take over SIGINT / SIGTERM
  * moved twisted logging to logger
  * removed sleep time to wait for finished worker process
  * only init MultiProcessWorker if multiprocessing is enabled

 -- Jan Schneider <j.schneider@uib.de>  Mon, 13 Jun 2011 20:40:16 +0200

opsiconfd (4.0.1.1-1) stable; urgency=low

  * New feature: admin network

 -- Jan Schneider <j.schneider@uib.de>  Fri, 15 Apr 2011 12:27:18 +0200

opsiconfd (4.0.1-8) stable; urgency=low

  * Fixed import of non-existing resource

 -- Christian Kampka <c.kampka@uib.de>  Tue, 05 Apr 2011 12:14:43 +0200

opsiconfd (4.0.1-7) stable; urgency=low

  * Fixed import for python 2.4 evironments

 -- Christian Kampka <c.kampka@uib.de>  Tue, 05 Apr 2011 12:14:43 +0200

opsiconfd (4.0.1-6) testing; urgency=low

  * Fix webdav auth for hosts

 -- Jan Schneider <j.schneider@uib.de>  Tue, 29 Mar 2011 18:55:57 +0200

opsiconfd (4.0.1-5) testing; urgency=low

  * Fore host id

 -- Jan Schneider <j.schneider@uib.de>  Fri, 18 Mar 2011 15:32:25 +0100

opsiconfd (4.0.1-4) testing; urgency=low

  * Remove some errbacks

 -- Jan Schneider <j.schneider@uib.de>  Thu, 17 Mar 2011 16:48:09 +0100

opsiconfd (4.0.1-3) testing; urgency=low

  * Fix renderError in rpc worker

 -- Jan Schneider <j.schneider@uib.de>  Fri, 11 Mar 2011 15:22:14 +0100

opsiconfd (4.0.1-2) testing; urgency=low

  * opsi-doc resource.

 -- Jan Schneider <j.schneider@uib.de>  Fri, 11 Mar 2011 12:43:14 +0100

opsiconfd (4.0.1-1) testing; urgency=low

  * testing release

 -- Jan Schneider <j.schneider@uib.de>  Wed, 23 Feb 2011 11:12:51 +0100

opsiconfd (4.0.0.99-1) testing; urgency=low

  * new default for max authentication failures is 5
  * add multiprocessing feature