@@ -23,7 +23,8 @@
 	</span>
 	<span id="links">
 		<ul>
-			<li><a href="configed" onClick="javascript:window.open('configed','configed','toolbar=no,menubar=no,scrollbars=no,resizable=yes,fullscreen=no,location=no,directories=no,status=no');return false">opsi configuration editor</a></li>
+			<li><a href="configed" onClick="javascript:window.open('configed','configed','toolbar=no,menubar=no,scrollbars=no,resizable=yes,fullscreen=no,location=no,directories=no,status=no');return false">opsi configuration editor (java applet)</a></li>
+			<li><a href="configed.jnlp">opsi configuration editor (java web start)</a></li>
 			<li><a href="interface">opsi config interface</a></li>
 			<li><a href="info">opsiconfd info</a></li>
 			<!--li><a href="doc">opsi documentation and manuals</a></li-->
