@@ -1,8 +1,9 @@
 opsiconfd (4.0.1.3-1) stable; urgency=low
 
   * Add expired session info to statistics
+  * Add configed jnlp resource and link
 
- -- Jan Schneider <j.schneider@uib.de>  Fri, 17 Jun 2011 13:59:24 +0200
+ -- Jan Schneider <j.schneider@uib.de>  Tue, 21 Jun 2011 15:19:48 +0200
 
 opsiconfd (4.0.1.2-1) stable; urgency=low
 
